# Ag

./: .gitignore  CMakeLists.txt  Overview.md  README.md
Source/: CMakeLists.txt  Template.cpp  Template.hpp  Test_Template.cpp
Source/Core/: App.cpp  Binary.cpp  ByteOrder.cpp  CMakeLists.txt  CPU.cpp  CodePoint.cpp  CommandLineSchema.cpp  CoreInternal.cpp  CoreInternal.hpp  ErrorGuard.cpp  Exception.cpp  Format.cpp  FsDirectory.cpp  FsPath.cpp  FsPathSchema.cpp  FsPathSchema.hpp  FsSearchPathList.cpp  InlineMemory.cpp  Memory.cpp  Platform.hpp  PosixAPI.cpp  PosixAPI.hpp  PreCompiledHeader.hpp  ProgramArguments.cpp  ScalarParser.cpp  StackTrace.cpp  Stream.cpp  String.cpp  StringPrivate.cpp  StringPrivate.hpp  Template.cpp  Template.hpp  Test_App.cpp  Test_Binary.cpp  Test_Bz2Stream.cpp  Test_CPU.cpp  Test_CommandLine.cpp  Test_EnumInfo.cpp  Test_ErrorGuard.cpp  Test_Exception.cpp  (+25 more)
Source/Geometry/: AffineTransform2D.cpp  Angle.cpp  Arc2D.cpp  CMakeLists.txt  CubicBezierCurve2D.cpp  DCEL.cpp  DCEL_Algorithms.cpp  DCEL_Boolean.cpp  DCEL_RingTracer.cpp  DCEL_RingTracer.hpp  DCEL_Sweep.cpp  DCEL_Triangulate.cpp  DCEL_Triangulate.hpp  Exceptions.cpp  Geometry.natvis  Geometry_TestsPCH.hpp  Grahpics.uxf  GtestHelpers.cpp  GtestHelpers.hpp  Line2D.cpp  LineEq2D.cpp  LineSeg2D.cpp  Matrix2x2.cpp  Matrix3x3.cpp  NumericDomain.cpp  Operations.hpp  Operations_Base.hpp  Operations_x64v1.hpp  Operations_x64v2.hpp  Point2D.cpp  Point2DCollectionView.cpp  Point2I.cpp  Point2ICollectionView.cpp  PreCompiledHeader.hpp  QuadBezierCurve2D.cpp  Rect2D.cpp  Rect2I.cpp  Size2D.cpp  Size2I.cpp  SnapContext.cpp  (+32 more)
Source/Gfx2D/: Brush.cpp  Brushes.cpp  CMakeLists.txt  Colour.cpp  Colours.cpp  DecompositionContext.cpp  DecompositionContext.hpp  Font.cpp  Gfx2D_Internal.cpp  Gfx2D_Internal.hpp  Gfx2D_TestPCH.hpp  GpuDrawList.cpp  Graphic.cpp  GraphicArtefact.cpp  GraphicDecomposition.cpp  GraphicGroup.cpp  Operations.hpp  Operations_Base.hpp  Operations_x64v1.hpp  PartitionedPolygon.cpp  Path.cpp  Pen.cpp  PolygonClipping.cpp  PolygonClipping.hpp  PreCompiledHeader.hpp  PrimitiveGraphics.cpp  Scene.cpp  StrokeHelper.cpp  StrokeHelper.hpp  Template.cpp  Template.hpp  Test_Colours.cpp  Test_GpuDrawList.cpp  Test_GraphicDecomposition.cpp  Test_GraphicGroup.cpp  Test_Operations.cpp  Test_PartitionPipeline.cpp  Test_PolygonClipping.cpp  Test_Scene.cpp  Test_StrokeHelper.cpp  (+1 more)
Source/Include/Ag/: Core.hpp  GTest_Core.hpp  Geometry.hpp  Gfx2D.hpp  ObjectGL.hpp  QtInterop.hpp  Sdl3Tools.hpp  Win32Base.hpp
Source/Include/Ag/Core/: AlignedTypes.hpp  App.hpp  Binary.hpp  ByteOrder.hpp  CPU.hpp  CodePoint.hpp  CollectionTools.hpp  CommandLineSchema.hpp  Configuration.hpp  EnumInfo.hpp  ErrorGuard.hpp  Exception.hpp  Format.hpp  FsDirectory.hpp  FsPath.hpp  FsSearchPathList.hpp  InlineMemory.hpp  LinearSortedMap.hpp  LinearSortedSet.hpp  Math.hpp  Memory.hpp  Platform.hpp  ProgramArguments.hpp  ScalarParser.hpp  StackTrace.hpp  Stream.hpp  String.hpp  Trace.hpp  Uri.hpp  Utf.hpp  Utils.hpp  Variant.hpp  VariantType.hpp  VariantTypes.hpp  Version.hpp
Source/Include/Ag/Geometry/: Angle.hpp  (+28 more)
Source/ObjectGL/: APIResolvers.cpp  APIs.cpp  BaseTypes.cpp  Buffer.cpp  BufferSchema.cpp  CMakeLists.txt  CommandSetTools.hpp  CommandSets.cpp  ContextOptions.cpp  DisplayContext.cpp  DisplayContextPrivate.cpp  DisplayContextPrivate.hpp  DisplayFormat.cpp  ExtensionSet.cpp  GLX_API.cpp  GLX_CommandSets.cpp  Identifiers.cpp  IndexBuffer.cpp  OpenGLException.cpp  Platform.cpp  PreCompiledHeader.hpp  Program.cpp  ProgramBuilder.cpp  RenderContext.cpp  RenderContextPrivate.cpp  RenderContextPrivate.hpp  ResourceWrappers.cpp  ResourceWrappers.hpp  SDL2Driver.cpp  SDL3Driver.cpp  Shader.cpp  Template.cpp  Template.hpp  VertexArrayObject.cpp  VertexBuffer.cpp  VertexSchema.cpp  WGLDriver.cpp  WGL_API.cpp  WGL_CommandSets.cpp  WGL_Tools.cpp
Source/ObjectGL/Extensions/: 3DFX.cpp  3DFXCommands.cpp  3DLabs.cpp  3DLabsCommands.cpp  AMD.cpp  AMDCommands.cpp  ARB.cpp  ARBCommands.cpp  ATI.cpp  ATICommands.cpp  Apple.cpp  AppleCommands.cpp  Ext.cpp  ExtCommands.cpp  Gremedy.cpp  GremedyCommands.cpp  HP.cpp  HPCommands.cpp  IBM.cpp  IBMCommands.cpp  Ingr.cpp  IngrCommands.cpp  Intel.cpp  IntelCommands.cpp  Intense3D.cpp  Intense3DCommands.cpp  Khr.cpp  KhrCommands.cpp  Mesa.cpp  MesaCommands.cpp  NVidia.cpp  NVidiaCommands.cpp  OES.cpp  OESCommands.cpp  OML.cpp  OMLCommands.cpp  Ovr.cpp  OvrCommands.cpp  PGI.cpp  PGICommands.cpp  (+4 more)
Source/QtInterop/: CommandLineWrangler.cpp  Conversion.cpp  Template.cpp  Template.hpp  Test_Template.cpp
Source/Sdl3Tools/: ApiException.cpp  CMakeLists.txt  DisplayModeSpec.cpp  EventProcessor.cpp  GPUObjects.cpp  Initialiser.cpp  OpenGL.cpp  PreCompiledHeader.hpp  Primitives.cpp  ProgramArguments.cpp  PropertySet.cpp  Surface.cpp  Template.cpp  Template.hpp  Test_DisplayModeSpec.cpp  Test_ProgramArguments.cpp  Test_Template.cpp  Window.cpp  WrapperTypes.cpp
Source/SymbolPackager/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CompressionStream.cpp  CompressionStream.hpp  GnuMapFileReader.cpp  GnuMapFileReader.hpp  GnuNmFileReader.cpp  GnuNmFileReader.hpp  LineTokeniser.cpp  LineTokeniser.hpp  Main.cpp  MsMapFileReader.cpp  MsMapFileReader.hpp  PdbFileReader.cpp  PdbFileReader.hpp  SymbolDb.cpp  SymbolDb.hpp  SymbolFileReader.cpp  SymbolFileReader.hpp  Utils.cpp  Utils.hpp
Source/Win32Base/: BaseWindow.cpp  Bitmap.cpp  Brush.cpp  CMakeLists.txt  ComTools.cpp  Ctrl.cpp  CtrlArranger.cpp  CustomCtrl.cpp  CustomWindow.cpp  DeviceContext.cpp  Dialog.cpp  Dispatcher.cpp  Font.cpp  GdiResource.cpp  GdiResourceCache.cpp  GdiResourceFactory.cpp  GuiApp.cpp  InternalTools.cpp  InternalTools.hpp  KernelTools.cpp  Message.cpp  MessageBox.cpp  MessageMap.cpp  MessageTarget.cpp  Pen.cpp  PreCompiledHeader.hpp  Template.cpp  Template.hpp  Tools.cpp  Window.cpp
Source/WriteGlyphGeometry/: CMakeLists.txt  CommandLineOptions.cpp  CommandLineOptions.hpp  GlyphExtractor.cpp  GlyphExtractor.hpp  GlyphWriter.cpp  GlyphWriter.hpp  Helpers.cpp  Helpers.hpp  Main.cpp  PreCompiledHeader.hpp  Template.cpp  Template.hpp
(+148 files in other folders)
